poc/tests/errors/test_FplVariableAlreadyDeclared_class_06.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            x: Nat

            optional pred TestProperty(x: Int)
            {
                true
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:9:40: The name 'x' was already declared in the current context at (7,13)